--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,22 +8,43 @@ on:
 
 env:
   TERRAFORM_VERSION: '1.14.2'
-  GO_VERSION: '1.21'
 
 permissions:
-  contents: read
+  contents: write
+  packages: write
   pull-requests: write
 
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    outputs:
+      version_tag: ${{ steps.semver.outputs.version_tag }}
+      version: ${{ steps.semver.outputs.version }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - name: Generate Version
+      run: |
+        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        echo "Last tag: $LAST_TAG"
+
+        # Extract version numbers
+        VERSION=${LAST_TAG#v}
+        IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+
+        # Increment patch version
+        PATCH=$((PATCH + 1))
+        NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}"
+
+        echo "New version: $NEW_VERSION"
+        echo "version_tag=$NEW_VERSION" >> $GITHUB_OUTPUT
+        echo "version=${MAJOR}.${MINOR}.${PATCH}" >> $GITHUB_OUTPUT
+      id: semver
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
@@ -33,11 +54,17 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version: ${{ env.GO_VERSION }}
+        go-version: '1.21'
 
     - name: Install tflint
       run: |
         curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+    - name: Install terraform-compliance
+      run: |
+        python3 -m venv ~/.venv/terraform-compliance
+        ~/.venv/terraform-compliance/bin/pip install terraform-compliance
+        echo "$HOME/.venv/terraform-compliance/bin" >> $GITHUB_PATH
 
     - name: Run lint
       run: make lint
@@ -47,3 +74,30 @@ jobs:
 
     - name: Run unit tests
       run: make test-unit
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Tag Repo
+      uses: mathieudutour/github-tag-action@v6.2
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        custom_tag: ${{ needs.test.outputs.version_tag }}
+
+    - name: Publish Release
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ needs.test.outputs.version_tag }}
+        name: ${{ needs.test.outputs.version_tag }}
+        draft: false
+        prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
